fixed text-pic alignment issue, started fleshing out mobile view

--- a/mainstyles.css
+++ b/mainstyles.css
@@ -8,9 +8,7 @@ colours
 
 body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
   min-height: 100vh;
   margin: 0;
   background-color: #2B2A4C;
@@ -18,47 +16,29 @@ body {
   /* padding-top: 10px; */
 }
 
-.container {
-  width: 80%;
-  max-width: 1200px;
+h1,
+h2,
+h3 {
+  color: #fff;
 }
 
-.profile-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-top: 5rem; /* Adjust the margin as needed */
-  justify-content: center;
+p {
+  color: #ccc;
+  font-family: Michroma; 
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 400; 
+  line-height: 25px; 
+} 
+
+
+footer {
   text-align: center;
-}
-
-.profile-pic {
-  width: 400px;
-  height: 400px;
-  border-radius: 50%;
-  border: 2px solid #EA906C;
-  box-shadow: 0 0 0 15px #750E21(246, 243, 243, 0.06);
   margin-top: 20px;
+  color: #ccc;
 }
 
-.profile-pic-container {
-  width: 400px;
-  height: 400px;
-  margin-top: 20px;
-}
-
-.profile-pic:hover {
-  box-shadow: 0 0 0 15px rgba(246, 243, 243, 0.06);
-}
-
-.profile-text {
-  max-width: 80%;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 20px;
-}
-
+/* navbar */
 .navbar-logo {
   width: 25px;
   height: 25px;
@@ -73,17 +53,6 @@ body {
   text-decoration: none;
   font-size: 1.5rem;
   font-weight: bold;
-}
-
-
-h1,
-h2,
-h3 {
-  color: #fff;
-}
-
-p {
-  color: #ccc;
 }
 
 .custom-navbar {
@@ -101,6 +70,53 @@ p {
   background: linear-gradient(to right, #2B2A4C 25%, #EA906C 75%);
 }
 
+.row{
+  display: block;
+  text-align: center;
+ }
+
+.container {
+  max-width: 1200px;
+}
+
+.profile-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
+}
+
+.profile-pic {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  border: 2px solid #EA906C;
+  box-shadow: 0 0 0 15px #750E21(246, 243, 243, 0.06);
+  max-width: 100%;
+}
+
+.profile-pic-container {
+  width: 400px;
+  height: 400px;
+  max-width: 600px;
+  margin: 0 auto 0 0;
+}
+
+.profile-pic:hover {
+  box-shadow: 0 0 0 15px rgba(246, 243, 243, 0.06);
+}
+
+.profile-text {
+  max-width: 600px;
+  text-align: flex-end;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+  margin: 0 0 0 auto;
+  margin-right: 2rem;
+}
+
 .profile-intro{
   color: #EEE2DE;
   font-size: 3rem;
@@ -110,26 +126,7 @@ p {
   font-family: Michroma; 
   font-style: normal; 
   font-variant: normal; 
-  font-weight: 700;  } 
-  
-p { 
-  font-family: Michroma; 
-  font-style: normal; 
-  font-variant: normal; 
-  font-weight: 400; 
-  line-height: 25px; 
-  } 
-
-#intro,
-#about,
-#hobbies,
-#professional {
-  text-align: center;
-  margin-top: 20px;
-}
-
-footer {
-  text-align: center;
-  margin-top: 20px;
-  color: #ccc;
-}
+  font-weight: 700;  
+  max-width: 500px;
+  align-items: flex-end;
+} 
